✅ test(security): refactor group controller and member service tests
* simplify assertion in GroupsControllerTest using direct lambda
* use getFirst() instead of get(0) for list access
* add missing assertion for saved member ID in GroupMembersServiceTest